creditas-sf/force-app/main/default/objects/Garantias__c/Garantias__c.object-meta.xml
<CustomObject>
    <label>Garantias</label>
    <nameField>
        <label>Garantias Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garantias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>