creditas-sf/force-app/main/default/objects/Garantias__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Garantias</relationshipLabel>
    <relationshipName>Garantias</relationshipName>
    <type>Lookup</type>
</CustomField>