creditas-sf/force-app/main/default/objects/Garantias__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Garantias</relationshipLabel>
    <relationshipName>Garantia</relationshipName>
    <type>Lookup</type>
</CustomField>