creditas-sf/force-app/main/default/objects/Garantias__c/fields/Recurso_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Recurso_Financeiro__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recurso Financeiro</label>
    <referenceTo>FinancialResources__c</referenceTo>
    <relationshipLabel>Garantias</relationshipLabel>
    <relationshipName>Garantia</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>